Update to index
test

--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@ $(document).ready(function () {
 <div id="about-the-project" class="section level1">
 <h1>About the project</h1>
 <p><em>Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the ‘Useful links’ page in the mooc area (chapter 1) for instructions.</em></p>
+<p><strong>Hello!</strong> My repository link:</p>
+<p><a href="https://github.com/roopekaaronen/IODS-project" class="uri">https://github.com/roopekaaronen/IODS-project</a></p>
 <hr />
 </div>
 <div id="insert-chapter-2-title-here" class="section level1">
