--- a/index.html
+++ b/index.html
@@ -140,16 +140,16 @@ $(document).ready(function () {
 
 <div id="TOC">
 <ul>
-<li><a href="#about-the-project">About the project</a></li>
+<li><a href="#roopes-project"><strong>Roope’s Project</strong></a></li>
 <li><a href="#insert-chapter-2-title-here">Insert chapter 2 title here</a></li>
 </ul>
 </div>
 
 <hr />
-<div id="about-the-project" class="section level1">
-<h1>About the project</h1>
-<p><em>Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the ‘Useful links’ page in the mooc area (chapter 1) for instructions.</em></p>
-<p><strong>Hello!</strong> My repository link:</p>
+<div id="roopes-project" class="section level2">
+<h2><strong>Roope’s Project</strong></h2>
+<p><strong>Hello world!</strong> Welcome to my Open Data course page.</p>
+<p><em>My repository link:</em></p>
 <p><a href="https://github.com/roopekaaronen/IODS-project" class="uri">https://github.com/roopekaaronen/IODS-project</a></p>
 <hr />
 </div>
