--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ $(document).ready(function () {
 <hr />
 <div id="roopes-project" class="section level2">
 <h2><strong>Roope’s Project</strong></h2>
-<p><strong>Hello world!</strong> Welcome to my Open Data course page.</p>
+<p><strong>Hello world!</strong> Welcome to my Open Data course page. I like turtles.</p>
 <p><em>My repository link:</em></p>
 <p><a href="https://github.com/roopekaaronen/IODS-project" class="uri">https://github.com/roopekaaronen/IODS-project</a></p>
 <hr />
